2012-11-16  Ilya Tikhonovsky  <loislo@chromium.org>

        webaudio: leak: AudioContext objects are leaking. They retain 36mb of shared data.
        https://bugs.webkit.org/show_bug.cgi?id=102356

        Reviewed by Adam Barth.

        A clean-up code was moved from uninitialize to clear method.
        AudioContext marks itself as hasPendingActivity in method constructCommon and unmarks itself in method clear.
        m_isStopScheduled filters out second ActiveDOMObject::stop call.
        markForDeletion appends AudioNode pointer to m_nodesToDelete array if there is no active audio thread.
        adoptRef was added in createOfflineContext method.

        * inspector-protocol/nmi-webaudio-leak-test-expected.txt: Added.
        * inspector-protocol/nmi-webaudio-leak-test.html: Added.

2012-11-18  Kunihiko Sakamoto  <ksakamoto@chromium.org>

        min/max/step support for calendar picker on datetime/datetime-local
        https://bugs.webkit.org/show_bug.cgi?id=102628

        Reviewed by Kent Tamura.

        Verify that calendar picker has correct available dates when
        min/max/step attributes are set in datetime input.

        * platform/chromium/fast/forms/calendar-picker/calendar-picker-datetime-with-step-expected.txt: Added.
        * platform/chromium/fast/forms/calendar-picker/calendar-picker-datetime-with-step.html: Added.

2012-11-18  Kentaro Hara  <haraken@chromium.org>

        Unreviewed. Rebaselined images.

        * platform/chromium-linux-x86/fast/block/float/overhanging-tall-block-expected.txt: Added.
        * platform/chromium-linux/fast/block/float/overhanging-tall-block-expected.png: Added.
        * platform/chromium-linux/fast/block/float/overhanging-tall-block-expected.txt: Added.
        * platform/chromium-mac-lion/fast/block/float/overhanging-tall-block-expected.txt: Added.
        * platform/chromium-mac-snowleopard/fast/block/float/overhanging-tall-block-expected.txt: Added.