@@ -1,3 +1,10 @@
+2012-11-18  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Unreviewed: add missed test files for r135111.
+
+        * inspector-protocol/resources/audio-context.html: Added.
+        * inspector-protocol/resources/blank.html: Added.
+
 2012-11-16  Ilya Tikhonovsky  <loislo@chromium.org>
 
         webaudio: leak: AudioContext objects are leaking. They retain 36mb of shared data.
